--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,8 @@
   "version": "late init",
   "license": "",
   "tasks": {
-    "dev": "deno -A --unstable-kv ./source/main.ts"
+    "dev": "DEV=true deno -A --unstable-kv ./source/main.ts",
+    "prod": "deno -A --unstable-kv ./source/main.ts"
   },
   "importMap": "./import-map.json"
 }
