--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "lock": false,
-  "version": "late init",
+  "version": "0.0.1-alpha",
   "license": "",
   "tasks": {
     "dev": "DEV=true deno -A --unstable-kv ./source/main.ts",
