--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
   "version": "0.1.3-alpha",
   "license": "",
   "tasks": {
-    "dev": "DEV=true deno -A --unstable-kv ./source/main.ts",
+    "dev": "DEV=true CONFIG=dev deno -A --unstable-kv ./source/main.ts",
     "prod": "deno -A --unstable-kv ./source/main.ts"
   },
   "importMap": "./import-map.json"
