--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,10 @@
 {
   "lock": false,
-  "version": "0.1.6-alpha",
+  "version": "0.1.7-alpha",
   "license": "",
   "tasks": {
     "dev": "DEV=true CONFIG=dev deno -A --unstable-kv ./source/main.ts",
-    "prod": "deno -A --unstable-kv ./source/main.ts"
+    "prod": "CONFIG=prod deno -A --unstable-kv ./source/main.ts"
   },
   "importMap": "./import-map.json"
 }
