--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
   "license": "",
   "tasks": {
     "dev": "DEV=true CONFIG=dev deno -A --unstable-kv ./source/main.ts",
-    "prod": "CONFIG=prod deno -A --unstable-kv ./source/main.ts"
+    "prod": "deno -A --unstable-kv ./source/main.ts"
   },
   "importMap": "./import-map.json"
 }
