--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,8 @@
   "tasks": {
     "dev": "DEV=true deno -A --unstable-kv --unstable-broadcast-channel ./source/main.ts",
     "prod": "DEV_PROD=true deno -A --unstable-kv --unstable-broadcast-channel ./source/main.ts",
-    "compile": "deno compile --output devexp --no-check -A --unstable-kv --unstable-broadcast-channel ./source/main.ts"
+    "compile": "deno compile --output devexp --no-check -A --unstable-kv --unstable-broadcast-channel ./source/main.ts",
+    "zj": "zellij --layout .zellij/layout.kdl"
   },
   "importMap": "./import-map.json"
 }
